--- a/templates/tabpage.xml
+++ b/templates/tabpage.xml
@@ -1,2 +1,19 @@
-<tabpage name="{{ name }}" scalef="{{ scale_from|default(0.0) }}" scalet="{{ scale_from|default(1.0) }}" li_t="{{ title|default('') }}" li_c="{{ color|default('gray') }}" li_s="{{ text_size|default(14) }}" li_o="false" li_b="false" la_t="" la_c="gray" la_s="14" la_o="false" la_b="false" >
+{#- The li and lo attributes seem to be duplicated. -#}
+<tabpage
+  name="{{ component.name }}"
+  scalef="{{ component.scale_from|default(0.0) }}"
+  scalet="{{ component.scale_from|default(1.0) }}"
+  li_t="{{ component.text|default('') }}"
+  li_c="{{ component.color|default('gray') }}"
+  li_s="{{ component.text_size|default(14) }}"
+  li_o="{{ component.outline|default(False) }}"
+  li_b="{{ component.background|default(False) }}"
+  la_t="{{ component.text|default('') }}"
+  la_c="{{ component.color|default('gray') }}"
+  la_s="{{ component.text_size|default(14) }}"
+  la_o="{{ component.outline|default(False) }}"
+  la_b="{{ component.background|default(False) }}" >
+  {%- for child in component.components %}
+    {{ render(child, component)|indent(2, False) }}
+  {% endfor -%}
 </tabpage>
