Added support for osc and midi messages.

--- a/templates/_header.xml
+++ b/templates/_header.xml
@@ -21,6 +21,12 @@
     }) -%}
   {%- endif -%}
 
+  {%- if 'osc' in component -%}
+    {%- set _dummy = component.update({
+      'osc': component.osc|b64encode,
+    }) -%}
+  {%- endif -%}
+
   {%- set calculated_width = component.width -%}
 
   {%- if component.width[-1] == '%' -%}
@@ -55,4 +61,30 @@
 
   {#- At this point, component x, y, width and height need to be absolute values/coordinates. -#}
   {%- include component.type ~ '.xml' -%}
+{%- endmacro -%}
+
+{%- macro midi(component) -%}
+  {%- if 'midi_value' in component -%}
+    {%- set midi_data = {
+      'change_type': 'c',
+      'message_type': component.midi_color.message_type,
+      'channel': component.midi_color.channel,
+      'data1': component.midi_color.data1,
+      'value_from': component.midi_color.value_from,
+      'value_to': component.midi_color.value_to,
+    } -%}
+    {%- include('_midi.xml') -%}
+  {%- endif -%}
+
+  {%- if 'midi_color' in component -%}
+    {%- set midi_data = {
+      'change_type': 'c',
+      'message_type': component.midi_color.message_type,
+      'channel': component.midi_color.channel,
+      'data1': component.midi_color.data1,
+      'value_from': component.midi_color.value_from,
+      'value_to': component.midi_color.value_to,
+    } -%}
+    {%- include('_midi.xml') -%}
+  {%- endif -%}
 {%- endmacro -%}
