--- a/templates/push.xml
+++ b/templates/push.xml
@@ -1,18 +1,19 @@
 <control
-  type="labelh"
+  type="push"
   name="{{ component.name }}"
   x="{{ component.x|default(0) }}"
   y="{{ component.y|default(0) }}"
   w="{{ component.width|default(100) }}"
   h="{{ component.height|default(30) }}"
   color="{{ component.color|default('gray') }}"
-  text="{{ component.text|default('labelv') }}"
-  size="{{ component.text_size|default(14) }}"
-  background="{{ component.background|default(False) }}"
-  outline="{{ component.outline|default(False) }}"
   osc_cs="{{ component.osc|default('') }}"
   scalef="{{ component.value_from|default(0) }}"
   scalet="{{ component.value_to|default(1) }}"
+  sp="{{ component.press|default('true') }}"
+  sr="{{ component.release|default('false') }}"
+  velocity="{{ component.y_velocity|default(0) }}"
+  velocity_invert="{{ component.y_velocity_invert|default(0) }}"
+  local_off="{{ component.local_off|default('false') }}"
 >
   {{ midi(component)|indent(2, False) }}
 </control>
