--- a/templates/_header.xml
+++ b/templates/_header.xml
@@ -1,7 +1,30 @@
 {%- macro render(component, parent, index=0, column=0, row=0) -%}
-  {%- if component.type == 'tabpage' -%}
+  {# All variables we intend to change, need to go into the namespace. #}
+  {%- set ns = namespace(
+    component=component,
+  ) -%}
+  {{ns.component|pprint}}
+
+
+    {%- set ns.component = ns.component|merge({
+      'x': 0,
+      'y': 0,
+      'width': '100%',
+      'height': '100%',
+    }) -%}
+
+
+
+
+  {%- if ns.component.type in reusable_components -%}
+    {# Set defaults from reusable component. #}
+    {%- set reused_component = reusable_components[ns.component.type] -%}
+    {% set ns.component = reused_component|merge(ns.component, {'type': reused_component.type}) %}
+  {%- endif -%}
+
+  {%- if ns.component.type == 'tabpage' -%}
     {#- Set tabpage default values since this will always take up all available space. -#}
-    {%- set _dummy = component.update({
+    {%- set ns.component = ns.component|merge({
       'x': 0,
       'y': 0,
       'width': '100%',
@@ -9,58 +32,61 @@
     }) -%}
   {%- endif -%}
 
-  {%- if 'text' in component -%}
-    {%- set _dummy = component.update({
-      'text': component.text|placeholders(data, index, column, row)|b64encode,
-    }) -%}
-  {%- endif -%}
 
-  {%- if 'name' in component -%}
-    {%- set _dummy = component.update({
-      'name': component.name|placeholders(data, index, column, row)|b64encode,
-    }) -%}
-  {%- endif -%}
+  {#- Apply placeholders to all properties. -#}
+  {%- for key in ns.component -%}
+    {%- set value = ns.component[key] -%}
 
-  {%- if 'osc' in component -%}
-    {%- set _dummy = component.update({
-      'osc': component.osc|placeholders(data, index, column, row)|b64encode,
-    }) -%}
-  {%- endif -%}
+    {# Handle all string values and text, name, osc #}
+    {%- if value is string or key in ['text', 'name', 'osc'] -%}
+      {%- set new_value = value|placeholders(data, index, column, row) -%}
 
-  {%- set calculated_width = component.width -%}
+      {%- if key in ['text', 'name', 'osc'] -%}
+        {%- set new_value = new_value|b64encode -%}
+      {%- endif -%}
 
-  {%- if component.width[-1] == '%' -%}
+      {% set ns.component = ns.component|merge({ key: new_value }) %}
+    {%- endif -%}
+
+  {%- endfor -%}
+
+  {% if 'width' not in ns.component %}
+    {{ ns.component|pprint }}
+  {% endif %}
+  {%- set calculated_width = ns.component.width -%}
+  {%- if ns.component.width[-1] == '%' -%}
     {#- Calculate this component's width by its parent's width. -#}
-    {%- set calculated_width = (component.width[:-1]|float / 100) * parent.width|float -%}
+    {%- set calculated_width = (ns.component.width[:-1]|float / 100) * parent.width|float -%}
   {%- endif -%}
 
-  {%- set calculated_height = component.height -%}
-  {%- if component.height[-1] == '%' -%}
+  {%- set calculated_height = ns.component.height -%}
+  {%- if ns.component.height[-1] == '%' -%}
     {#- Calculate this component's height by its parent's width. -#}
-    {%- set calculated_height = (component.height[:-1]|float / 100) * parent.height|float -%}
+    {%- set calculated_height = (ns.component.height[:-1]|float / 100) * parent.height|float -%}
   {%- endif -%}
 
-  {%- set x_offset = component.x|float -%}
-  {%- if component.x[-1] == '%' -%}
+  {%- set x_offset = ns.component.x|float -%}
+  {%- if ns.component.x[-1] == '%' -%}
     {#- Calculate this component's x_offset by its parent's width. -#}
-    {%- set x_offset = (component.x[:-1]|float / 100) * parent.width|float -%}
+    {%- set x_offset = (ns.component.x[:-1]|float / 100) * parent.width|float -%}
   {%- endif -%}
 
-  {%- set y_offset = component.y|float -%}
-  {%- if component.y[-1] == '%' -%}
+  {%- set y_offset = ns.component.y|float -%}
+  {%- if ns.component.y[-1] == '%' -%}
     {#- Calculate this component's y_offset by its parent's width. -#}
-    {%- set y_offset = (component.y[:-1]|float / 100) * parent.height|float -%}
+    {%- set y_offset = (ns.component.y[:-1]|float / 100) * parent.height|float -%}
   {%- endif -%}
 
-  {%- set _dummy = component.update({
+  {%- set ns.component = ns.component|merge({
     'width': calculated_width|int,
     'height': calculated_height|int,
     'x': (parent.x|float + x_offset)|int,
     'y': (parent.y|float + y_offset)|int,
   }) -%}
 
+
   {#- At this point, component x, y, width and height need to be absolute values/coordinates. -#}
-  {%- include component.type ~ '.xml' -%}
+  {%- include ns.component.type ~ '.xml' -%}
 {%- endmacro -%}
 
 {%- macro midi(component) -%}
