--- a/templates/labelv.xml
+++ b/templates/labelv.xml
@@ -6,10 +6,10 @@
   w="{{ component.width|default(100) }}"
   h="{{ component.height|default(30) }}"
   color="{{ component.color|default('gray') }}"
-  text="{{ component.text|default('labelv') }}"
+  text="{{ component.text|default('') }}"
   size="{{ component.text_size|default(14) }}"
-  background="{{ component.background|default(False) }}"
-  outline="{{ component.outline|default(False) }}"
+  background="{{ component.background|default('false') }}"
+  outline="{{ component.outline|default('false') }}"
   osc_cs="{{ component.osc|default('') }}"
   scalef="{{ component.value_from|default(0) }}"
   scalet="{{ component.value_to|default(1) }}"
