--- a/templates/labelv.xml
+++ b/templates/labelv.xml
@@ -14,5 +14,5 @@
   scalef="{{ component.value_from|default(0) }}"
   scalet="{{ component.value_to|default(1) }}"
 >
-  {{ midi(component)|indent(2, False) }}
+  {{- midi(component)|indent(2, False) -}}
 </control>
