--- a/templates/led.xml
+++ b/templates/led.xml
@@ -10,5 +10,5 @@
   scalet="{{ component.value_to|default(1) }}"
   osc_cs="{{ component.osc|default('') }}"
 >
-  {{ midi(component)|indent(2, False) }}
+  {{- midi(component)|indent(2, False) -}}
 </control>
