--- a/templates/faderh.xml
+++ b/templates/faderh.xml
@@ -13,5 +13,5 @@
   response="{{ component.response|default('absolute') }}"
   centered="{{ component.centered|default('false') }}"
 >
-  {{ midi(component)|indent(2, False) }}
+  {{- midi(component)|indent(2, False) -}}
 </control>
