--- a/templates/multipush.xml
+++ b/templates/multipush.xml
@@ -1,18 +1,17 @@
 <control
-  type="labelh"
+  type="multipush"
   name="{{ component.name }}"
   x="{{ component.x|default(0) }}"
   y="{{ component.y|default(0) }}"
   w="{{ component.width|default(100) }}"
   h="{{ component.height|default(30) }}"
   color="{{ component.color|default('gray') }}"
-  text="{{ component.text|default('') }}"
-  size="{{ component.text_size|default(14) }}"
-  background="{{ component.background|default('false') }}"
-  outline="{{ component.outline|default('false') }}"
   osc_cs="{{ component.osc|default('') }}"
   scalef="{{ component.value_from|default(0) }}"
   scalet="{{ component.value_to|default(1) }}"
+  local_off="{{ component.local_off|default('false') }}"
+  number_x="{{ component.number_x|default(5) }}"
+  number_y="{{ component.number_y|default(5) }}"
 >
   {{- midi(component)|indent(2, False) -}}
 </control>
