--- a/templates/push.xml
+++ b/templates/push.xml
@@ -15,5 +15,5 @@
   velocity_invert="{{ component.y_velocity_invert|default(0) }}"
   local_off="{{ component.local_off|default('false') }}"
 >
-  {{ midi(component)|indent(2, False) }}
+  {{- midi(component)|indent(2, False) -}}
 </control>
