--- a/templates/toggle.xml
+++ b/templates/toggle.xml
@@ -11,5 +11,5 @@
   scalet="{{ component.value_to|default(1) }}"
   local_off="{{ component.local_off|default('false') }}"
 >
-  {{ midi(component)|indent(2, False) }}
+  {{- midi(component)|indent(2, False) -}}
 </control>
