--- a/templates/layout.xml
+++ b/templates/layout.xml
@@ -2,7 +2,7 @@
   We need to make sure even the layout component has coordinates in order to be
   able to compute dimensions + coordinates of sub-components.
 -#}
-{%- set _dummy = component.update({
+{%- set component = component|merge({
   'x': 0,
   'y': 0,
 }) -%}
