--- a/templates/_header.xml
+++ b/templates/_header.xml
@@ -28,14 +28,15 @@
       'width': 100,
       'height': 100,
   } -%}
-  {%- if ns.component.type == 'tabpage' or ns.component.type == 'repeat' -%}
-    {#- Set tabpage default values since this will always take up all available space. -#}
-    {%- set component_defaults = {
-        'x': 0,
-        'y': 0,
+  {%- if ns.component.type in ['tabpage', 'container', 'repeat'] -%}
+    {#-
+      We consider these similar to html block elements using the available
+      width and height.
+    -#}
+    {%- set component_defaults = component_defaults|merge({
         'width': '100%',
         'height': '100%',
-    } -%}
+    }) -%}
   {%- endif -%}
   {%- set ns.component = component_defaults|merge(ns.component) -%}
   {#
